# motion-fast

./: .gitignore  AGENTS.md  README.md  motion_fast.py  pyproject.toml
motion_fast_lib/: __init__.py  analysis.py  cli.py  events.py  models.py  probe.py  review.py  runner.py  utils.py
tests/: test_core.py
